--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
   line-height: 1.5;
+  letter-spacing: -0.02em;
   font-weight: 400;
 }
 body {
