--- a/src/components/ParticipantItem/ParticipantItem.module.css
+++ b/src/components/ParticipantItem/ParticipantItem.module.css
@@ -1,8 +1,9 @@
 .item {
+  padding: 10px 12px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   gap: 2rem;
   border: 1px solid black;
   border-radius: 8px;
